--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
             </address>
         </div>
     </header>
+    <div class="backdrop is-open">
+        <div class="modal">
+            <button type="button" class="modal-close-btn">
+                <svg class="modal-close-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
 </body>
 
 </html>
